# CrowdSound

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  codegen.sh  crowdsound.service  version.py
cmake/: grpc.cmake
proto/: crowdsound_admin_service.proto  crowdsound_service.proto  playsource_service.proto
src/: CMakeLists.txt  admin_service.cpp  admin_service.hpp  crowdsound_service.cpp  crowdsound_service.hpp  main.cpp  playsource_client.cpp  playsource_client.hpp  server.cpp  server.hpp  version.hpp
src/grpcServer/: CrowdSoundServer.cpp  Makefile  crowdSoundProto.proto
src/proto/: crowdsound_admin_service.grpc.pb.cc  crowdsound_admin_service.grpc.pb.h  crowdsound_admin_service.pb.cc  crowdsound_admin_service.pb.h  crowdsound_service.grpc.pb.cc  crowdsound_service.grpc.pb.h  crowdsound_service.pb.cc  crowdsound_service.pb.h  playsource_service.grpc.pb.cc  playsource_service.grpc.pb.h  playsource_service.pb.cc  playsource_service.pb.h
src/util/: network.hpp
